Ticket #6274: Add and index "archived" column to different models; validate that parent is not archived when creating child; archive/restore children (in background) when parent is archived/restored (using a single straight SQL UPDATE statement for performance reasons); automated tests for everything

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -213,3 +213,5 @@ en:
   duplicate_source: Source exists
   geolocation_invalid_value: Location must contain a valid GeoJSON (http://geojson.org/)
   datetime_invalid_date: Please provide a valid date
+  error_team_archived: "Can't create project under trashed team"
+  error_project_archived: "Can't create media under trashed project"
