--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -215,3 +215,4 @@ en:
   datetime_invalid_date: Please provide a valid date
   error_team_archived: "Can't create project under trashed team"
   error_project_archived: "Can't create media under trashed project"
+  error_team_archived_for_source: "Can't create source under trashed team"
