Ticket #5961 - remove old localization for email validation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -66,6 +66,7 @@ en:
         text: Comment
       user:
         reset_password_token: Reset password token
+        email: E-mail
     errors:
       messages:
         record_invalid: 'Validation failed: %{errors}'
