--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -214,3 +214,5 @@ en:
   only_super_admin_can_do_this: "Sorry, only super admins can make this change"
   max_number_of_team_users_reached: "The maximum number of users for this team was reached"
   max_number_of_projects_reached: "The maximum number of projects for this team was reached"
+  cant_set_custom_statuses: "Sorry, you can't use the custom statuses feature"
+  cant_set_checklist: "Sorry, you can't use the Checklist feature"
