--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -174,3 +174,9 @@ pt:
   error_team_archived_for_source: "Não é possível criar fonte em um time que esteja na lixeira"
   permission_error: "Desculpe, você não tem permissão para fazer esta operação"
   error_annotated_archived: "Desculpe, este item está na lixeira, você não pode adicionar nota a ele"
+  only_super_admin_can_do_this: "Desculpe, apenas super admins podem efetuar esta alteração"
+  max_number_of_team_users_reached: "O número máximo de usuários para este time foi alcançado"
+  max_number_of_projects_reached: "O número máximo de projetos para este time foi alcançado"
+  cant_set_custom_statuses: "Desculpe, você não pode usar o recurso de status customizados"
+  cant_set_checklist: "Desculpe, você não pode usar o recurso de Checklist"
+  cant_create_media_under_this_team_using_extension: "Desculpe, este time não tem permissão para utilizar a extensão de navegador"
