Ticket #6268: Display statuses field after submit invalid status

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -87,6 +87,7 @@ en:
   invalid_media_item: Sorry, this is not a valid media item
   invalid_default_status_for_custom_verification_status: The default status is invalid
   invalid_id_or_label_for_custom_verification_status: The status id and label are mandatory
+  invalid_statuses_format_for_custom_verification_status: Custom verification statuses should have valid `label`, `id`, `description` and `style`
   already_exists: already exists
   mail_account_confirmation: "%{app_name} account confirmation"
   mail_request_to_join: "%{user} wants to join %{team} team on %{app_name}!"
