Ticket #5973: Adding a validation to make sure that only users under that team are assigned to the "attribution" field

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -219,3 +219,4 @@ en:
   cant_set_custom_statuses: "Sorry, you can't use the custom statuses feature"
   cant_set_checklist: "Sorry, you can't use the Checklist feature"
   cant_create_media_under_this_team_using_extension: "Sorry, this team is not allowed to use the browser extension"
+  error_invalid_attribution: "Invalid attribution"
