--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -126,6 +126,10 @@ pt:
         menu: Enviar instruções para redefinir a senha
       export_project:
         menu: Exportar dados do projeto
+      delete_tasks:
+        done: tarefas removadas
+        are_you_sure_you_want_to_delete_the_tasks_from_team: Tem certeza que deseja apagar todas as tarefas nesta equipe
+        all_the_following_tasks_will_be_deleted: '? As seguintes tarefas serão removidas:'
   reset_password_instructions: "Instruções para redefinir a senha do %{app_name}"
   email_not_found: E-mail não encontrado
   slack_channel_format_wrong: 'O canal do Slack é inválido, ele deve ter o formato #general'
