--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -126,6 +126,10 @@ fr:
         menu: Envoyer les instructions pour réinitialiser le mot de passe
       export_project:
         menu: Exporter les données du projet
+      delete_tasks:
+        done: les tâches ont bien été effacées
+        are_you_sure_you_want_to_delete_the_tasks_from_team: Voulez-vous vraiment effacer toutes les tâches de l'équipe
+        all_the_following_tasks_will_be_deleted: '? Les tâches suivantes seront effacées :'
   reset_password_instructions: "Instructions pour réinitialiser le mot de passe sur %{app_name}"
   email_not_found: Courriel introuvable
   slack_channel_format_wrong: 'Canal Slack non valide : le format doit être `#general`'
